/* Copyright 2024 The Proto Splitter Authors. All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
==============================================================================*/
syntax = "proto3";

package proto_splitter_testdata;

message RepeatedString {
  repeated string strings = 1;
}

message RepeatedRepeatedString {
  int32 filler_field = 1;
  repeated RepeatedString rs = 2;
}

message ManyFields {
  ManyFields field_one = 1;
  repeated ManyFields repeated_field = 2;
  string string_field = 3;
  repeated string repeated_string_field = 4;
  map<uint32, string> map_field_uint32 = 5;
  map<int64, string> map_field_int64 = 6;
  map<bool, ManyFields> nested_map_bool = 7;
}

message StringNode {
  string val = 1;
  repeated StringNode child_nodes = 2;
}